      (Closes: #698320)
    + [SECURITY] CVE-2013-1667: fix a rehashing DoS opportunity
      against code that uses arbitrary user input as hash keys.
      (Closes: #702296)
    + Fix an Encode memory leak that occurred in the UTF-8 encoding.
      (Closes: #702416)
      + upgrade the Broken versions of the separate libencode-perl
        package accordingly.

 -- Dominic Hargreaves <dom@earth.li>  Sun, 10 Mar 2013 16:33:33 +0000

perl (5.16.2-2) experimental; urgency=low

  [ Dominic Hargreaves ]
  * Merge 5.14.2-15 and 5.14.2-16 from unstable
    + [SECURITY] CVE-2012-5526: CGI.pm improper cookie and p3p
      CRLF escaping (Closes: #693420)
    + [SECURITY] Fix misparsing of maketext strings which could allow
      arbitrary code execution from untrusted maketext templates
      (Closes: #695224)
    + [SECURITY] add warning to Storable documentation that Storable
      documents should not be accepted from untrusted sources
      (Closes: #695223)
    + Fix CPAN::FirstTime defaults with nonexisting site dirs if a parent
      is writable. (Closes: #688842)
    + Don't overwrite $Config{lddlflags} or ccdlflags on GNU/kFreeBSD.
      (Closes: #689713)

  [ Niko Tyni ]
  * Minor packaging improvements:
    + present Debian bugs consistently in patchlevel.h.
    + use gzip -n for reproducible results
    + support comments in file lists
    + fix a syntax error in debian/copyright
    + support the '**' notation in file lists for matching subdirectories

 -- Dominic Hargreaves <dom@earth.li>  Sun, 13 Jan 2013 17:54:46 +0000

perl (5.16.2-1) experimental; urgency=low

  * New upstream release
    - update debian/copyright version (no changes)
    - update Breaks version for libmodule-corelist-perl
  * Merge 5.14.2-13 and 5.14.2-14 from unstable

 -- Dominic Hargreaves <dom@earth.li>  Fri, 02 Nov 2012 19:33:13 +0000

perl (5.16.1-1) experimental; urgency=low

  * Merge 5.14.2-11 and 5.14.2-12 from unstable
  * New upstream release